feat(java17): Compile using java 17 (#2797)
* feat(java17): Compile using java 17

* [SpotlessApply] Squash me

---------

Co-authored-by: Bonita CI <bonita-ci@bonitasoft.com>